--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <script src="https://www-sites-opensocial.googleusercontent.com/gadgets/proxy/refresh=3600&container=enterprise/https://sites.google.com/site/tyronstorage20/ruffle/ruffle.js"></script>
-
-<object width="900" height="650">
+<object width="100%" height="100%">
     <param name="movie" value="https://www-sites-opensocial.googleusercontent.com/gadgets/proxy/refresh=3600&container=enterprise/https://sites.google.com/site/247camerongaming/duck-life-3-evolution/ducklife-3-evolution.swf?attredirects=0">
     <embed src="https://www-sites-opensocial.googleusercontent.com/gadgets/proxy/refresh=3600&container=enterprise/https://sites.google.com/site/247camerongaming/duck-life-3-evolution/ducklife-3-evolution.swf?attredirects=0" width="900" height="650">
